--- a/css15.html
+++ b/css15.html
@@ -20,7 +20,7 @@
             justify-items: center;
             align-content: center;
             align-items: center;
-            background-color: blue;
+            background-color: black;
         }
 
 
